# zdcurtain

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  resources.qrc  ruff.toml
res/: about.ui  design.ui  overlay.ui  resources.qrc  settings.ui  zdcurtain.ui
res/wheels/: vcolorpicker-1.4.5-py3-none-any.whl
scripts/: build.ps1  compile_resources.ps1  start.ps1
src/: App.py  ZDCurtain.py  ZDImage.py  about.py  error_messages.py  frame_analysis.py  hotkeys.py  image_utilities.py  load_removal.py  load_tracking.py  region_selection.py  settings.py  stylesheets.py  user_profile.py  utils.py
src/capture_method/: BitBltCaptureMethod.py  CaptureMethodBase.py  DesktopDuplicationCaptureMethod.py  VideoCaptureDeviceCaptureMethod.py  WindowsGraphicsCaptureMethod.py  __init__.py
src/ui/: about_ui.py  overlay_ui.py  settings_ui.py  zdcurtain_ui.py
